--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,11 @@
 
 
 
-<title>exercice1</title>
+<title>{{title}}</title>
+
+<div class="content">
+    <span >{{title}} app is running!</span>
+</div>
 
 <app-menu></app-menu>
 
